[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "bojstat-py"
version = "0.1.3"
description = "日本銀行API向けPythonクライアント"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
]

[project.urls]
Repository = "https://github.com/youseiushida/bojstat"

[project.optional-dependencies]
pandas = ["pandas>=2.2.0"]
polars = ["polars>=1.0.0"]
dataframe = [
    "pandas>=2.2.0",
    "polars>=1.0.0",
]
cli = [
    "typer>=0.16.0",
    "rich>=13.0.0",
    "pyarrow>=18.0.0",
]

[project.scripts]
bojstat = "bojstat.cli:app_entry"

[tool.hatch.build.targets.wheel]
packages = ["src/bojstat"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.0",
    "ruff>=0.9.0",
    "tzdata>=2025.3",
]
